# smart_calc

./: .gitignore
src/: Makefile  calc.h  parser.c  stack.c
src/app/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  graph.cpp  graph.h  graph.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/app/.qt/: QtDeploySupport.cmake
src/back/: Makefile  calc.h  credit.c  parser.c  polish.c  stack.c
src/back/tests/: s21_calc_tests.c
src/tests/: s21_calc_tests.c
